feat: Add styling

--- a/index.html
+++ b/index.html
@@ -12,17 +12,27 @@
 
 <body>
   <header>
-    <nav class="search-bar">
-      <p class="shares">shares</p>
-      <p class="playlist">playlist</p>
-      <p class="personal-videos">personal-videos</p>
-      <section>
-        <p>Admin Username</p>
+    <nav>
+      <div class="search-bar">
+        <p class="shares">shares
+          <img src="assests/share.png" alt="share-icon" width="20px" height="20px">
+        </p>
+        <p class="playlist">playlist
+          <img src="assests/playlist.png" alt="playlist-icon" width="20px" height="20px">
+        </p>
+        <p class="personal-videos">personal-videos
+          <img src="assests/user.png" alt="personal-videos-icon" width="20px" height="20px">
+        </p>
+      </div>
+      <section class="admin-user">
+        <p class="admin">Admin Username
+          <img src="assests/user (1).png" alt="admin-user-icon">
+        </p>
         <h1>
-          <img src="" alt="company-logo">
+          <img class="smLogo" src="assests/smLogo.jpeg" alt="company-logo">
         </h1>
-      </section>
     </nav>
+    </section>
   </header>
   <main>
     <h2>Shares</h2>
@@ -30,135 +40,151 @@
       <article class="personal-card">
         <section class="personal-header">
           <div style="background-image: url('assests/mark.jpeg')" class="grid-item">
-            <p class="header">views</p>
+            <h5 class="header">views</h5>
+            <h2 class="header">02</h2>
             <p class="extra-space"></p>
-            <section class="personal-card-body">
-              <p class="name">Name</p>
-              <p class="playlist-link">link</p>
-              <p class="playlist-name">name of playlist</p>
-              <p class="attachments">attachments</p>
-            </section>
-            <section class="bottom-bar">
-            </section>
           </div>
-          <section>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Mark</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Mark</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Mark Lee's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
       </article>
       <article class="personal-card">
         <section class="personal-header">
           <div style="background-image: url('assests/renjun.jpeg')" class="grid-item">
-            <p class="header">views</p>
+            <h5 class="header">views</h5>
+            <h2 class="header">02</h2>
             <p class="extra-space"></p>
-            <section class="personal-card-body">
-              <p class="name">Name</p>
-              <p class="playlist-link">link</p>
-              <p class="playlist-name">name of playlist</p>
-              <p class="attachments">attachments</p>
-            </section>
-            <section class="bottom-bar">
-            </section>
           </div>
-          <section>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Renjun</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Renjun</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Huang Renjun's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
       </article>
       <article class="personal-card">
         <section class="personal-header">
           <div style="background-image: url('assests/jeno.jpeg')" class="grid-item">
-            <p class="header">views</p>
+            <h5 class="header">views</h5>
+            <h2 class="header">02</h2>
             <p class="extra-space"></p>
-            <section class="personal-card-body">
-              <p class="name">Name</p>
-              <p class="playlist-link">link</p>
-              <p class="playlist-name">name of playlist</p>
-              <p class="attachments">attachments</p>
-            </section>
-            <section class="bottom-bar">
-            </section>
           </div>
-          <section>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Jeno</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Jeno</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Lee Jeno's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
       </article>
       <article class="personal-card">
         <section class="personal-header">
           <div style="background-image: url('assests/haechan.jpeg')" class="grid-item">
-            <p class="header">views</p>
+            <h5 class="header">views</h5>
+            <h2 class="header">02</h2>
             <p class="extra-space"></p>
-            <section class="personal-card-body">
-              <p class="name">Name</p>
-              <p class="playlist-link">link</p>
-              <p class="playlist-name">name of playlist</p>
-              <p class="attachments">attachments</p>
-            </section>
-            <section class="bottom-bar">
-            </section>
           </div>
-          <section>
-          </article>
-          <article class="personal-card">
-            <section class="personal-header">
-              <div style="background-image: url('assests/jaemin.jpeg')" class="grid-item">
-                <p class="header">views</p>
-                <p class="extra-space"></p>
-                <section class="personal-card-body">
-                  <p class="name">Name</p>
-                  <p class="playlist-link">link</p>
-                  <p class="playlist-name">name of playlist</p>
-                  <p class="attachments">attachments</p>
-                </section>
-                <section class="bottom-bar">
-                </section>
-              </div>
-              <section>
-              </article>
-              <article class="personal-card">
-                <section class="personal-header">
-                  <div style="background-image: url('assests/chenle.jpeg')" class="grid-item">
-                    <p class="header">views</p>
-                    <p class="extra-space"></p>
-                    <section class="personal-card-body">
-                      <p class="name">Name</p>
-                      <p class="playlist-link">link</p>
-                      <p class="playlist-name">name of playlist</p>
-                      <p class="attachments">attachments</p>
-                    </section>
-                    <section class="bottom-bar">
-                    </section>
-                  </div>
-                  <section>
-                  </article>
-                  <article class="personal-card">
-                    <section class="personal-header">
-                      <div style="background-image: url('assests/jisung.jpeg')" class="grid-item">
-                        <p class="header">views</p>
-                        <p class="extra-space"></p>
-                        <section class="personal-card-body">
-                          <p class="name">Name</p>
-                          <p class="playlist-link">link</p>
-                          <p class="playlist-name">name of playlist</p>
-                          <p class="attachments">attachments</p>
-                        </section>
-                        <section class="bottom-bar">
-                        </section>
-                      </div>
-                      <section>
-                      </article>
-                      <article class="personal-card">
-                        <section class="personal-header">
-                          <div style="background-image: url('assests/nctDream.jpg')" class="grid-item">
-                            <p class="header">views</p>
-                            <p class="extra-space"></p>
-                            <section class="personal-card-body">
-                              <p class="name">Name</p>
-                              <p class="playlist-link">link</p>
-                              <p class="playlist-name">name of playlist</p>
-                              <p class="attachments">attachments</p>
-                            </section>
-                            <section class="bottom-bar">
-                            </section>
-                          </div>
-                          <section>
-                      </article>
-                    </section>
-                  </main>
-                </body>
-                
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Haechan</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Haechan</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Lee Dong Hyuck's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
+      </article>
+      <article class="personal-card">
+        <section class="personal-header">
+          <div style="background-image: url('assests/jaemin.jpeg')" class="grid-item">
+            <h5 class="header">views</h5>
+            <h2 class="header">02</h2>
+            <p class="extra-space"></p>
+          </div>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Jaemin</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Jaemin</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Na Jaemin's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
+      </article>
+      <article class="personal-card">
+        <section class="personal-header">
+          <div style="background-image: url('assests/chenle.jpeg')" class="grid-item">
+            <h5 class="header">views</h5>
+            <h2 class="header">02</h2>
+            <p class="extra-space"></p>
+          </div>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Chenle</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Chenle</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Zhong Chenle's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
+      </article>
+      <article class="personal-card">
+        <section class="personal-header">
+          <div style="background-image: url('assests/jisung.jpeg')" class="grid-item">
+            <h5 class="header">views</h5>
+            <h2 class="header">04</h2>
+            <p class="extra-space"></p>
+          </div>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">Jisung</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/Jisung</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">Park Jisung's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
+      </article>
+      <article class="personal-card">
+        <section class="personal-header">
+          <div style="background-image: url('assests/nctDream.jpg')" class="grid-item">
+            <h5 class="header">views</h5>
+            <h2 class="header">01</h2>
+            <p class="extra-space"></p>
+          </div>
+        </section>
+        <section class="personal-card-body">
+          <h4 class="name">NCT Dream</h4>
+          <h6 class="date">Monday 01/23/16 10:22am</h6>
+          <p class="playlist-link">http://2sm.2smstage.com/p/NCTDream</p>
+          <h6 class="playlist-title">PLAYLIST</h6>
+          <p class="playlist-name">NCT Dream's Playlist</p>
+          <p class="attachments">ATTACHMENTS</p>
+          <h2 class="attachments-number attachments">04</h2>
+        </section>
+      </article>
+    </section>
+  </main>
+</body>
+
 </html>
 
 <!-- <main class="form-and-grid">
